[tool.poetry]
name = "ngds-hudi"
version = "0.1.0"
description = ""
authors = ["Sai Vineel <saivineel.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.0"
pyspark = "^3.5.0"
findspark = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
